--- a/app/src/main/res/layout/activity_graph_screen.xml
+++ b/app/src/main/res/layout/activity_graph_screen.xml
@@ -9,4 +9,10 @@
     android:orientation="vertical"
     android:background="#f3fc06">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Commit test"
+        android:id="@+id/textView12" />
 </LinearLayout>
