--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -46,7 +46,7 @@
         android:textSize="30dp"
         android:textStyle="bold"
         android:typeface="serif"
-        android:background="#ff0000"
+        android:background="@drawable/custom_button1"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp" />
@@ -61,11 +61,10 @@
         android:textSize="30dp"
         android:textStyle="bold"
         android:typeface="serif"
-        android:background="#ff0000"
+        android:background="@drawable/custom_button1"
+        android:layout_marginTop="50dp"
         android:layout_below="@+id/newCookButton"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView"
-        android:layout_marginTop="54dp" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -77,9 +76,9 @@
         android:textSize="30dp"
         android:textStyle="bold"
         android:typeface="serif"
-        android:background="#ff0000"
-        android:layout_marginTop="58dp"
-        android:layout_below="@+id/recipeBookButton"
-        android:layout_centerHorizontal="true" />
+        android:background="@drawable/custom_button1"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="39dp" />
 
 </RelativeLayout>
