--- a/app/src/main/res/layout/activity_new_cook.xml
+++ b/app/src/main/res/layout/activity_new_cook.xml
@@ -159,7 +159,8 @@
         android:layout_centerHorizontal="true"
         android:textSize="50dp"
         android:textStyle="bold"
-        android:textColor="#fe0303" />
+        android:textColor="#1223de"
+        android:background="@drawable/custom_button1"/>
 
     <TextView
         android:layout_width="wrap_content"
