--- a/app/src/main/res/layout/activity_previous_cooks.xml
+++ b/app/src/main/res/layout/activity_previous_cooks.xml
@@ -12,8 +12,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textView11"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:text="Previous"
+        android:id="@+id/textView13"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColor="#e54d0c"
+        android:textSize="40dp"
+        android:textStyle="bold|italic"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Cooks"
+        android:id="@+id/textView16"
+        android:layout_below="@+id/textView13"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="40dp"
+        android:textColor="#f60606"
+        android:textStyle="bold|italic"/>
 </RelativeLayout>
