--- a/app/src/main/res/layout/activity_recipe_page.xml
+++ b/app/src/main/res/layout/activity_recipe_page.xml
@@ -10,4 +10,62 @@
     tools:context="hm.heatermeater.RecipePage"
     android:background="#f3fc06">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Recipe"
+        android:id="@+id/textView13"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColor="#e54d0c"
+        android:textSize="40dp"
+        android:textStyle="bold|italic"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Page"
+        android:id="@+id/textView16"
+        android:layout_below="@+id/textView13"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="40dp"
+        android:textColor="#f60606"
+        android:textStyle="bold|italic"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Classic Roast Dinner"
+        android:id="@+id/roastButton"
+        android:layout_below="@+id/textView16"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="42dp"
+        android:textSize="25dp"
+        android:background="@drawable/custom_button1"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Beer Can Chicken"
+        android:id="@+id/chickenButton"
+        android:layout_below="@+id/roastButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="65dp"
+        android:textSize="25dp"
+        android:background="@drawable/custom_button1"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Roast Forerib of Beef"
+        android:id="@+id/beefButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:textSize="25dp"
+        android:background="@drawable/custom_button1"/>
 </RelativeLayout>
