--- a/app/src/main/res/layout/fragment_graph_.xml
+++ b/app/src/main/res/layout/fragment_graph_.xml
@@ -5,9 +5,36 @@
     android:background="#ff0000">
 
 
+    <!-- we add graph view to display -->
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/graph"
+        android:layout_width="340dp"
+        android:layout_height="480dp"
+        android:layout_margin="20dp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_graph_fragment" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Time (minutes)"
+        android:id="@+id/textView14"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="#000000"
+        android:textSize="25dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Temperature (°C)"
+        android:id="@+id/verticaltextview"
+        android:layout_marginTop="180dp"
+        android:textSize="25dp"
+        android:textColor="#000000"
+        android:layout_alignTop="@+id/graph"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
 </RelativeLayout>
